--- a/fpm.toml
+++ b/fpm.toml
@@ -9,7 +9,7 @@ keywords    = ["exp","log","rsqrt","spline","polynomial"]
 [build]
 auto-executables = false
 auto-examples    = false
-auto-tests       = false
+auto-tests       = true
 
 [library]
 source-dir  = "src"
@@ -17,3 +17,5 @@ include-dir = "src"
 
 [install]
 library = true
+
+
